# portfinder

./: .gitignore  LICENSE  README.md  Readme.md  pyproject.toml  scan_results.json  setup.py
.github/workflows/: release.yml
docker/: .dockerignore  Dockerfile
portex/: __init__.py  __main__.py  cli.py  scanner.py
portfinder/: __init__.py  cli.py  dto.py  scanner.py  utils.py
portfinder/utils/: __init__.py  file.py  request.py
scripts/: build.py  install.sh
